Subida con ediciones

--- a/05.Página_Web/style.css
+++ b/05.Página_Web/style.css
@@ -808,3 +808,9 @@ footer {
     transition: background-color 0.2s ease;
     
 }
+
+.Inicio {
+    grid: 1fr;
+    grid-template-columns: 1fr;
+
+}
