--- a/06.Atrapa_al_enemigo/style.css
+++ b/06.Atrapa_al_enemigo/style.css
@@ -2,6 +2,7 @@
 canvas {
     border: 2px solid #000;
     background-color: #776262;
+    border-radius: 8px;
 
 }
 
@@ -19,8 +20,26 @@ canvas {
     border-radius: 10px;
 }
 
+.lead:hover {
+     transform: translateY(-3px) scale(1.05);
+     cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    animation: glow 1.2s infinite alternate;
+    filter: drop-shadow(0,0 5px rgba(242, 0, 0, 0.5));
+}
+
+@keyframes glow {
+    from {
+        filter: drop-shadow(0 0 2px rgba(255, 0, 0, 0.5));
+    }
+    to {
+        filter: drop-shadow(0 0 12px rgb(242, 5, 5));
+    }
+}
+
 p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 10px;
     color: rgb(255, 255, 255);
 }
+
