--- a/09.Ejercicio_Frankenstein/style.css
+++ b/09.Ejercicio_Frankenstein/style.css
@@ -12,6 +12,8 @@ body {
 }
 
 
+
+
 #registroJugadores {
     padding: 15px;
     margin-top: 1rem;
@@ -19,19 +21,19 @@ body {
 }
 
 .formulario {
-    padding: 10px;
-    margin-top: 2rem;
-    background-color: #F2EFE9;
-    border-radius: 20px;
+    padding: 15px;
+    margin-top: 5rem;
     border-width: auto;
 }
 
+
 h1 {
     text-align: center;
-    margin-bottom: 20px;
-    background-color: beige;
+    margin-bottom: 40px;
+
     border-radius: 20px;
     display: flex;
+    padding-top: 10px;
     justify-content: center;
 }
 
@@ -120,6 +122,15 @@ h1 {
 
 .inputCor input {
     border-radius: 10px;
+}
+
+form {
+    box-shadow: 0 0 10px #000;
+    padding: 40px 30px 45px 40px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
 
